# Profile-Gen

./: Profile_Generator.py  README.md  app.py  pyproject.toml  인물평_프롬프트.txt
